--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/MediaRequest.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/MediaRequest.cshtml
@@ -2,12 +2,23 @@
     ViewBag.Title = "MediaRequest";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    
+    a
+    {
+        color:White;
+    }
+    #divRequestedMediaRecords
+    {
+        color:White;
+    }
+</style>
 @Scripts.Render("~/bundles/jquery")
 @Html.Hidden("userId", (string)(@ViewBag.UserID))
 @Html.Hidden("agencyId", (string)(@ViewBag.AgencyID))
 @Html.Hidden("hdnUserRole", (string)(@ViewBag.UserRole))
 
+@Html.ActionLink("New", "Create", new { area ="Recourse" })
 @*This is used to store Report Results*@
 <div id="divRequestedMediaRecords"></div> 
 
