--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/MediaRequest.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/MediaRequest.cshtml
@@ -18,7 +18,7 @@
 @Html.Hidden("agencyId", (string)(@ViewBag.AgencyID))
 @Html.Hidden("hdnUserRole", (string)(@ViewBag.UserRole))
 
-@Html.ActionLink("New", "Create", new { area ="Recourse" })
+@Html.ActionLink("New Media Requet", "Create", new { area ="Recourse" })
 @*This is used to store Report Results*@
 <div id="divRequestedMediaRecords"></div> 
 
