--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/_mediaRequests.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/_mediaRequests.cshtml
@@ -3,8 +3,8 @@
 <script src="~/Scripts/datatable/jquery-1.4.4.min.js" type="text/javascript"></script>
 <script src="~/Scripts/datatable/index.js" type="text/javascript"></script>
 <script src="~/Scripts/datatable/jquery.dataTables.min.js" type="text/javascript"></script>
-<div id="divMediaRecords">
-    <table id="mediaRecords" class="display">
+<div id="divMediaRequestRecords">
+    <table id="mediaRequestRecords" class="display">
         <thead>
             <tr>
                 <th>
