--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/Create.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/Create.cshtml
@@ -4,7 +4,7 @@
 }
 @Scripts.Render("~/bundles/jquery")
 <h2>
-    Media Request - Create</h2>
+    Media Request</h2>
 @Html.Hidden("userId", (string)(@ViewBag.UserID))
 @Html.Hidden("agencyId", (string)(@ViewBag.AgencyID))
 @Html.Hidden("hdnUserRole", (string)(@ViewBag.UserRole))
@@ -13,30 +13,62 @@
     <ul>
     </ul>
 </div>
+<div id="statementMediaTypeConstraint" style="font-size: small">
+    <table style="width: 100%">
+        <tr>
+            <td colspan="5">
+                Statement Date Range
+            </td>
+        </tr>
+        <tr>
+            <td>
+                From
+            </td>
+            <td>
+                <input type="text" id="statementStDt" data-bind="value:statementStDt" />
+            </td>
+            <td>
+                To
+            </td>
+            <td>
+                <input type="text" id="statementEndDt" data-bind="value:statementEndDt" />
+            </td>
+            <td>
+                <input type="button" class="editButton" value="OK" data-bind="click:submitStatementDateRange" />
+            </td>
+        </tr>
+        <tr>
+        </tr>
+    </table>
+</div>
 <div id="newComplaintContainer">
     <table class="searchtable" style="width: 60%" data-bind="visible:showSearchCriteria">
         <tr>
             <td colspan="3">
-                <b>Retrieve Account to begin Media Request:</b>
+                <b>Retrieve Account Information to begin Media Request (use any field to search):</b>
             </td>
         </tr>
         <tr>
-            <td style="width:30%;text-align:left">
-                PIMS Account Number
+            <td style="width: 30%; text-align: left">
+                Client Account Number
             </td>
-            <td style="width:1%;text-align:center">:</td>
-            <td style="width:69%;text-align:left">
+            <td style="width: 1%; text-align: center">
+                :
+            </td>
+            <td style="width: 69%; text-align: left">
                 <input type="text" id="pimsAccount" data-bind="hasfocus:setFocus,value:pimsAccountNumber" />
                 <span data-bind="text:pimsAccountNumberRequired, visible:pimsAccountNumberRequiredHasError"
                     style="color: Red"></span>
             </td>
         </tr>
         <tr>
-            <td style="width:30%;text-align:left">
-                Original Account
+            <td style="width: 30%; text-align: left">
+                Original Account Number
             </td>
-            <td style="width:1%;text-align:center">:</td>
-            <td style="width:69%;text-align:left">
+            <td style="width: 1%; text-align: center">
+                :
+            </td>
+            <td style="width: 69%; text-align: left">
                 <input type="text" id="originalAccount" data-bind="value:originalAccountNumber" />
                 <span data-bind="text:originalAccountNumberRequired, visible:originalAccountNumberRequiredHasError"
                     style="color: Red"></span>
@@ -57,11 +89,16 @@
             </td>
         </tr>
     </table>
-    <table class="PIMSDatatable" style="width: 60%" data-bind="visible:pimsDataAvailable">
+    <table class="searchtable" style="width: 60%" data-bind="visible:pimsDataAvailable">
         <tr>
-            <td style="width: 100%; background-color: #1f497d">
+            <td style="width: 100%; background-color: #1f497d; display: none">
                 <a href="#" style="text-decoration: none; font-weight: bold; color: white" data-bind="click:showHidePimsData">
                     PIMS Data:</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <b>Verify Client Account Data to View Available Media</b>
             </td>
         </tr>
         <tr>
@@ -77,7 +114,7 @@
                         <td data-bind="text:portfolio" style="text-align: left; width: 69%">
                         </td>
                     </tr>
-                    <tr>
+                    <tr style="display: none">
                         <td style="text-align: left; width: 30%">
                             Original Lender / Product
                         </td>
@@ -87,7 +124,7 @@
                         <td data-bind="text:lender" style="text-align: left; width: 69%">
                         </td>
                     </tr>
-                    <tr>
+                    <tr style="display: none">
                         <td style="text-align: left; width: 30%">
                             SSN
                         </td>
@@ -140,13 +177,18 @@
                 </table>
             </td>
         </tr>
+        <tr>
+            <td style="text-align: right">
+                <input type="button" class="editButton" value="&nbsp;View Media&nbsp;" data-bind="click:viewMedia" />
+            </td>
+        </tr>
     </table>
     <table class="dummyitem">
     </table>
     <table class="FollowupDatatable" data-bind="visible:showMediaTypeSelection" style="width: 60%">
         <tr>
             <td>
-                Select media type to request:
+                Select Media Type and Click "Submit" (Note: Media Shown is Immediately Available)
             </td>
         </tr>
         <tr>
@@ -172,11 +214,15 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#messageSummary').dialog({ modal: true, title: 'Summary:', autoOpen: false, width: 200, height: 200 });
+            $('#statementMediaTypeConstraint').dialog({ modal: true, title: '', autoOpen: false, width: 500, height: 200 });
             var pageVM = new pageViewModel($('#userId').val(), $('#agencyId').val(), $('#hdnUserRole').val(), $('#hdnId').val())
             ko.applyBindings(pageVM);
             if ($('#hdnId').val() != '') {
                 pageVM.loadExisitingRequest();
             }
+
+            $('#statementStDt').datepicker({ dateFormat: 'mm/dd/yy' });
+            $('#statementEndDt').datepicker({ dateFormat: 'mm/dd/yy' });
         });
     </script>
 }
