--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/Create.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/Create.cshtml
@@ -13,6 +13,51 @@
     <ul>
     </ul>
 </div>
+<div id="pimsResults" style="font-size: small">
+    <table style="text-align: center">
+        <tr>
+            <th>
+            </th>
+            <th>
+                Last name
+            </th>
+            <th>
+                First Name
+            </th>
+            <th>
+                Client Account #
+            </th>
+            <th>
+                Original Account #
+            </th>
+            <th>
+                Opened Date
+            </th>
+            <th>
+                C/O Date
+            </th>
+        </tr>
+        <tbody data-bind="foreach:pimsRecords">
+            <tr>
+                <td>
+                    <a href="#" data-bind="click:$root.selectedAccount">Select</a>
+                </td>
+                <td data-bind="text:LastName">
+                </td>
+                <td data-bind="text:FirstName">
+                </td>
+                <td data-bind="text:ACCOUNT">
+                </td>
+                <td data-bind="text:OriginalAccount">
+                </td>
+                <td data-bind="text:OpenDate">
+                </td>
+                <td data-bind="text:ChargeOffDate">
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 <div id="statementMediaTypeConstraint" style="font-size: small">
     <table style="width: 100%">
         <tr>
@@ -59,6 +104,17 @@
                 <input type="text" id="pimsAccount" data-bind="hasfocus:setFocus,value:pimsAccountNumber" />
                 <span data-bind="text:pimsAccountNumberRequired, visible:pimsAccountNumberRequiredHasError"
                     style="color: Red"></span>
+            </td>
+        </tr>
+        <tr>
+            <td style="width: 30%; text-align: left">
+                Client Name
+            </td>
+            <td style="width: 1%; text-align: center">
+                :
+            </td>
+            <td style="width: 69%; text-align: left">
+                <input type="text" id="clientName" data-bind="value:clientName" />
             </td>
         </tr>
         <tr>
@@ -202,7 +258,8 @@
         </tr>
         <tr>
             <td style="text-align: center">
-                <input type="button" class="editButton" value="&nbsp;Submit&nbsp;" data-bind="click:submit,visible:showSubmit" />
+                <input type="button" class="editButton" value="&nbsp;Submit&nbsp;& Exit" data-bind="click:submit,visible:showSubmit" />
+                <input type="button" class="editButton" value="&nbsp;Submit&nbsp;& Request More" data-bind="click:submitRequestMore,visible:showSubmit" />
             </td>
         </tr>
     </table>
@@ -214,12 +271,17 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#messageSummary').dialog({ modal: true, title: 'Summary:', autoOpen: false, width: 200, height: 200 });
+            $('#pimsResults').dialog({ modal: true, title: 'Select account:', autoOpen: false, width: 800, height: 500 });
             $('#statementMediaTypeConstraint').dialog({ modal: true, title: '', autoOpen: false, width: 500, height: 200 });
             var pageVM = new pageViewModel($('#userId').val(), $('#agencyId').val(), $('#hdnUserRole').val(), $('#hdnId').val())
             ko.applyBindings(pageVM);
             if ($('#hdnId').val() != '') {
                 pageVM.loadExisitingRequest();
             }
+
+            $('#pimsAccount').focus(function () { $(this).val(''); }).blur(function () { if ($(this).val() == '') $(this).val(pimsAccountFocusString); });
+            $('#clientName').focus(function () { $(this).val(''); }).blur(function () { if ($(this).val() == '') $(this).val(fOrlNameFocusString); });
+            $('#originalAccount').focus(function () { $(this).val(''); }).blur(function () { if ($(this).val() == '') $(this).val(originalAccountFocusString); });
 
             $('#statementStDt').datepicker({ dateFormat: 'mm/dd/yy' });
             $('#statementEndDt').datepicker({ dateFormat: 'mm/dd/yy' });
